name:                mockio-cmds-util-linux

-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             1.0.1.3
synopsis:            MockIO wrappers for util-linux cmds
description:         MockIO wrappers for util-linux cmds
cabal-version:       >= 1.10
license:             MIT
license-file:        LICENSE
author:              Martyn J. Pearce
maintainer:          haskell@sixears.com
build-type:          Simple
library
  ghc-options:        -O2 -W -Wall -fhelpful-errors
  exposed-modules:    MockIO.Cmds.UtilLinux.FindMnt
                    , MockIO.Cmds.UtilLinux.Mount
                    , MockIO.Cmds.UtilLinux.Paths
                    , MockIO.Cmds.UtilLinux.Umount
  other-modules:
  default-extensions: DeriveGeneric
                    , FlexibleContexts
                    , FlexibleInstances
                    , LambdaCase
                    , NoImplicitPrelude
                    , OverloadedStrings
                    , QuasiQuotes
                    , RankNTypes
                    , TemplateHaskell
                    , TypeApplications
                    , UnicodeSyntax
                    , ViewPatterns

  build-depends:      aeson, base, bytestring, lens, logging-effect, mtl, parsec
                    , parsers, safe, text, text-printer

                    , base1t        >= 0.0.5.0
                    , fpath         >= 1.3.2.0
                    , log-plus      >= 0.0.4.4
                    , mockio        >= 0.0.4.4
                    , mockio-log    >= 0.1.2.0
                    , mockio-plus   >= 0.3.12.0
                    , monadio-plus  >= 2.5.0.0
                    , parsec-plus   >= 1.1.1.4
                    , stdmain       >= 1.5.13.0

  hs-source-dirs:      src
  default-language:    Haskell2010

-------------------------------------------------------------------------------
